--- a/index.html
+++ b/index.html
@@ -1,24 +1,27 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>期刊影响因子预测 (2024)</title>
+    <title>高影响因子期刊预测 (2024)</title>
     <style>
         body { font-family: sans-serif; }
-        #result { margin-top: 20px; font-weight: bold; }
+        #results { margin-top: 20px; }
+        .journal { margin-bottom: 10px; padding: 5px; border-bottom: 1px solid #ccc; }
+        .journal-name { font-weight: bold; }
+        .predicted-if { color: green; }
         .error { color: red; }
+        .loading { color: blue; }
+        #progress { margin-top: 10px; }
     </style>
 </head>
 <body>
-    <h1>期刊影响因子预测 (2024)</h1>
+    <h1>高影响因子期刊预测 (2024)</h1>
+    <p>正在获取并分析影响因子大于 10 的期刊...</p>
 
-    <label for="journalName">请输入期刊名称：</label>
-    <input type="text" id="journalName" placeholder="例如：Nature">
-    <button onclick="predictIF()">预测影响因子</button>
-
-    <div id="result"></div>
+    <div id="results"></div>
+    <div id="progress"></div>
 
     <script>
-        // JavaScript代码将放在这里
+        // JavaScript 代码将放在这里
     </script>
 </body>
 </html>
