--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>高影响因子期刊预测 (2024)</title>
+    <title>期刊影响因子预测 (2024) - 使用 Web of Science</title>
     <style>
+        /* 与之前类似，可以根据需要添加样式 */
         body { font-family: sans-serif; }
         #results { margin-top: 20px; }
         .journal { margin-bottom: 10px; padding: 5px; border-bottom: 1px solid #ccc; }
@@ -14,14 +15,11 @@
     </style>
 </head>
 <body>
-    <h1>高影响因子期刊预测 (2024)</h1>
-    <p>正在获取并分析影响因子大于 10 的期刊...</p>
+    <h1>期刊影响因子预测 (2024) - 使用 Web of Science</h1>
+    <p>正在从 Web of Science 获取数据...</p>
 
     <div id="results"></div>
     <div id="progress"></div>
 
-    <script>
-        // JavaScript 代码将放在这里
-    </script>
-</body>
+    <script src="script.js"></script> </body>
 </html>
